--- a/IEProject/IEProject/Views/Home/JourneyPlanner.cshtml
+++ b/IEProject/IEProject/Views/Home/JourneyPlanner.cshtml
@@ -56,7 +56,7 @@
             
 
                 
-                
+                bla
                 <br />
                     <div class="container">
                       
