--- a/IEProject/IEProject/Views/Home/JourneyPlanner.cshtml
+++ b/IEProject/IEProject/Views/Home/JourneyPlanner.cshtml
@@ -415,8 +415,9 @@
     @Scripts.Render("~/Scripts/pace.js")
     @Scripts.Render("~/Scripts/leaflet.js")
 <script>
-
-    var mymap = L.map('mapid').setView([-37.81074867416108,144.94365002449257], 14);
+    var lat = JSON.parse('@Html.Raw(Json.Encode(@Model.Latitude))');
+    var lon = JSON.parse('@Html.Raw(Json.Encode(@Model.Longitude))');
+    var mymap = L.map('mapid').setView([lat,lon], 14);
     L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic2hpbmlnYW1pZXgiLCJhIjoiY2pnaXZhcG81MDJjMTJxcWpnc3VpajI5bCJ9.N5t4GjexNqoKeNtL1JxyUA', {
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
     maxZoom: 18,
