--- a/IEProject/IEProject/Content/ServicePage.css
+++ b/IEProject/IEProject/Content/ServicePage.css
@@ -29,3 +29,28 @@ background-color: #FFFFFF;
 .jumbotron{
     margin-top:70px;
 }
+#print
+{
+    position:relative;
+    bottom:1330px;
+    width:550px;
+   right:29px;
+    background-color:Gray;
+    overflow-y: scroll;
+    max-width:550px;
+    max-height:550px;
+    height:550px;
+}
+
+#content
+{
+    position:relative;
+    right:40px;
+    top:60px;
+  
+}
+hr{
+ 
+    border-color:black;
+
+}
