--- a/IEProject/IEProject/Views/Home/JourneyPlanner.cshtml
+++ b/IEProject/IEProject/Views/Home/JourneyPlanner.cshtml
@@ -13,6 +13,10 @@
 
       height: 550px;
       width:550px;
+      position:relative;
+      left:60px;
+
+      bottom:780px;
 
     }
 
@@ -38,21 +42,116 @@
             @using (Html.BeginForm("JourneyPlanner", "Home", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
-                <div id="mapid"></div>
-                <div class="container" style="margin-left:40px" id="content2">
+               
+                <div class="container" style="margin-right:100px" id="content2">
                     <div class="form-group" style="width:700px">
+<div class="panel panel-default">
+    <div class="panel-body">
+        <h5 class="text-center">
+            Where are you going?
+        </h5>
 
-
-                        @*@Html.Label("Destination Address", htmlAttributes: new { @class = "control-label col-md-2" })*@
-                        <h2 style="color:white;margin-top:25px">Where are you going? </h2>
-                        <div class="col-md-10">
+       
+              <div class="col-md-10">
                             @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
                             <div style="background-color:white;margin-top:15px;padding-left:15px">
                                 @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                             </div>
                         </div>
+        <br />
+      
+        <div class="container" style="font-size:10px">
+            <form style="color:black" id="servicesForm">
+                <div class="parent">
+                    <div class="col-sm-4">
+                        <h5 style="color:black">How are you travelling?</h5>
+                        <hr />
+                       
+                        <div style="color:black">
+                            @Html.CheckBoxFor(m => m.cartick)
+                            @Html.Label("Car")
+                        </div>
+                      
+                        <div style="color:black">
 
+
+                            @Html.CheckBoxFor(m => m.traintick)
+                            @Html.Label("Train")
+                        </div>
                     </div>
+                    <div class="col-md-5">
+                        <h5 style="color:black">Services</h5>
+                        <hr />
+                        <div style="color:black">
+                            @Html.CheckBoxFor(m => m.toilettick)
+                            @Html.Label("Public Toilet")
+                        </div>
+                        <div style="color:black">
+                            @Html.CheckBoxFor(m => m.accomodationselect)
+                            @Html.Label("Accomodation")
+
+                        </div>
+
+                        <div style="color:black">
+                            @Html.CheckBoxFor(m => m.hairdressingselect)
+
+                            @Html.Label("Hairdressing and Beauty Services")
+
+                        </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <h5 style="color:black">Food and Drinks</h5>
+                            <hr />
+                            <div style="color:black">
+                                @Html.CheckBoxFor(m => m.barselect)
+                                @Html.Label("Pubs, Taverns and Bars")
+
+                            </div>
+                            <div style="color:black">
+                                @Html.CheckBoxFor(m => m.cafeselect)
+                                @Html.Label("Cafes and Restaurants")
+
+                            </div>
+                            </div>
+                    <div class="col-lg-4">
+                        <h5 style="color:black">Shopping</h5>
+                        <hr />
+                        <div style="color:black">
+                            @Html.CheckBoxFor(m => m.retailselect)
+                            @Html.Label("Clothing Retailing")
+
+                        </div>
+                        <div style="color:black">
+                            @Html.CheckBoxFor(m => m.supermarketselect)
+                            @Html.Label("Supermarket and Grocery Stores")
+
+                        </div>
+                    </div>
+                    </div>
+
+            </form>
+           
+            </div>
+
+   
+        <button type="submit" class="btn btn-primary btn-lg btn-block">Search</button>
+        </div>
+   
+   
+                    </div>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+
+
+                     
 
                   
 
@@ -74,78 +173,10 @@
                     
 
                     <br />
-                    <div class="container">
+                    <br />
+                 
 
-                        <form style="color:white" id="servicesForm">
-
-                            <h2 style="color:white">How are you travelling?</h2>
-                            <hr />
-                            <div style="color:white">
-                                @Html.CheckBoxFor(m => m.cartick)
-                                @Html.Label("Car")
-                            </div>
-                            <div style="color:white">
-
-
-                                @Html.CheckBoxFor(m => m.traintick)
-                                @Html.Label("Train")
-                            </div>
-                            <h2 style="color:white">Services</h2>
-                            <hr />
-                            <div style="color:white">
-                                @Html.CheckBoxFor(m => m.toilettick)
-                                @Html.Label("Public Toilet")
-                            </div>
-                            <div style="color:white">
-                                @Html.CheckBoxFor(m => m.accomodationselect)
-                                @Html.Label("Accomodation")
-
-                            </div>
-                            <div style="color:white">
-                                @Html.CheckBoxFor(m => m.hairdressingselect)
-
-                                @Html.Label("Hairdressing and Beauty Services")
-
-                            </div>
-                            <h2 style="color:white">Food and Drinks</h2>
-                            <hr />
-                            <div style="color:white">
-                                @Html.CheckBoxFor(m => m.barselect)
-                                @Html.Label("Pubs, Taverns and Bars")
-
-                            </div>
-                            <div style="color:white">
-                                @Html.CheckBoxFor(m => m.cafeselect)
-                                @Html.Label("Cafes and Restaurants")
-
-                            </div>
-                            <h2 style="color:white">Shopping</h2>
-                            <hr />
-                            <div style="color:white">
-                                @Html.CheckBoxFor(m => m.retailselect)
-                                @Html.Label("Clothing Retailing")
-
-                            </div>
-                            <div style="color:white">
-                                @Html.CheckBoxFor(m => m.supermarketselect)
-                                @Html.Label("Supermarket and Grocery Stores")
-
-                            </div>
-
-
-                        </form>
-
-
-
-
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Search" style="margin:40px" class="btn btn-warning btn-min-block btn-lg" id="search" />
-                            </div>
-                        </div>
-                        <div>
-
-                        </div>
+                 
 
 
 
@@ -162,10 +193,13 @@
 
                 </div>
                 <br />
-                <div id="content">
-                    <div id="print">
-
-                        <div style="background-color:white;margin-left:40px">
+                
+             
+                <div id="content" >
+                    <div id="mapid"></div>
+                    <div id="print" style="margin-left:640px">
+                      
+                        <div style="background-color:white;font-size:10px">
                             @Html.Label("This is a journey planner")
                             <br />
                             @Html.Label("You destination is")
@@ -176,7 +210,7 @@
                         <br />
 
                         <div id="let" style="visibility:hidden">
-                            <table id="data" font color="#FFFFFF" style="margin-left:40px" class="table">
+                            <table id="data" font color="#FFFFFF" style="font-size:10px" class="table">
 
                                 <thead>
                                     <tr>
@@ -232,7 +266,7 @@
                         </div>
 
                         <div id="train" style="visibility:hidden">
-                            <table id="data2" font color="#FFFFFF" style="margin-left:40px" class="table">
+                            <table id="data2" font color="#FFFFFF" style=" font-size:10px" class="table">
 
                                 <thead>
                                     <tr>
@@ -274,7 +308,7 @@
                             </table>
                         </div>
 
-                        <table id="data3" font color="#FFFFFF" style="margin-left:40px" class="table">
+                        <table id="data3" font color="#FFFFFF"  style="font-size:10px" class="table">
 
                             <thead>
                                 <tr>
@@ -337,7 +371,7 @@
                             </tbody>
                         </table>
                         <div id="car" style="visibility:hidden">
-                            <table id="data4" font color="#FFFFFF" style="margin-left:40px" class="table">
+                            <table id="data4" font color="#FFFFFF" style="font-size:10px" class="table">
 
                                 <thead>
                                     <tr>
@@ -417,7 +451,7 @@
 <script>
     var lat = JSON.parse('@Html.Raw(Json.Encode(@Model.Latitude))');
     var lon = JSON.parse('@Html.Raw(Json.Encode(@Model.Longitude))');
-    var mymap = L.map('mapid').setView([lat,lon], 14);
+    var mymap = L.map('mapid').setView([lat,lon], 15);
     L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic2hpbmlnYW1pZXgiLCJhIjoiY2pnaXZhcG81MDJjMTJxcWpnc3VpajI5bCJ9.N5t4GjexNqoKeNtL1JxyUA', {
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
     maxZoom: 18,
