--- a/IEProject/IEProject/Views/Shared/_Layout.cshtml
+++ b/IEProject/IEProject/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                 <ul class="nav navbar-nav"style="color:white">
                     <li style="color:white">@Html.ActionLink("Home", "Index", "Home")</li>
                     <li style="color:white">@Html.ActionLink("Journey Planner", "JourneyPlanner", "Home")</li>
+                    <li style="color:white">@Html.ActionLink("Support", "Support", "Home")</li>
                 </ul>
             </div>
         </div>
