--- a/IEProject/IEProject/Views/Home/JourneyPlanner.cshtml
+++ b/IEProject/IEProject/Views/Home/JourneyPlanner.cshtml
@@ -35,7 +35,7 @@
             </nav>
 
             <img src="~/Content/images/disabled-128.png" width="100" height="100" />
-            <span style="color:white;font-size:45px;background-color:#00b8ff;padding-top:0px;padding-bottom:0px;padding-left:3px;padding-right:3px">
+            <span style="color:white;font-size:45px;padding-top:0px;padding-bottom:0px;padding-left:3px;padding-right:3px">
                 Plan your journey
             </span>
 
