--- a/IEProject/IEProject/Views/Shared/_Layout.cshtml
+++ b/IEProject/IEProject/Views/Shared/_Layout.cshtml
@@ -29,135 +29,89 @@
 
 <body>
 
-    <nav class="navbar navbar-inverse navbar-top">
-     
-
-            <div class="main_menu_bg" >
-                <div class="container">
-                    <div class="row">
-                        <div class="nave_menu">
-                            <nav class="navbar navbar-default" id="#navmenu">
-                                <div class="container-fluid">
-                                    <!-- Brand and toggle get grouped for better mobile display -->
-                                    <div class="navbar-header">
-                                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                                            <span class="sr-only">Toggle navigation</span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                        </button>
-                                        <a class="navbar-brand" href="/Home/Index">
-                                            <img src="~/Content/images/Logo3.png" />
-                                        </a>
-                                    </div>
-
-                                    <!-- Collect the nav links, forms, and other content for toggling -->
+    @*<nav class="navbar navbar-inverse navbar-top">*@
+    <header id="main_menu" class="header navbar-fixed-top">
 
 
-
-                                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-                                        <ul class="nav navbar-nav navbar-right">
-                                            <li style="color:white">@Html.ActionLink("Home", "Index", "Home")</li>
-                                            <li style="color:white">@Html.ActionLink("Journey Planner", "JourneyPlanner", "Home")</li>
-                                            <li style="color:white">@Html.ActionLink("Support", "Support", "Home")</li>
-                                            <li style="color:white">@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                            <li style="color:white">@Html.ActionLink("About", "About", "Home")</li>
-
-
-
-                                        </ul>
-                                    </div>
-
-                                </div>
-                            </nav>
-                        </div>
-                    </div>
-
-                </div>
-                </div>
-</nav>
-
-    
-        <div class="greyBackground">
-            @RenderBody()
-            <hr />
-        </div>
-
-      
-
-
-
-        <section id="contact" class="contact">
+        <div class="main_menu_bg">
             <div class="container">
                 <div class="row">
-                    <div class="main_contact">
-
-                        <div class="contactwithmap_content">
-
-                            <div class="contact_overlay">
-                                <div class="col-sm-8 col-xs-12">
-                                    <div class="locations_map">
-                                        <img src="~/Content/images/mapbg.png" alt="" />
-                                    </div>
+                    <div class="nave_menu">
+                        <nav class="navbar navbar-default" id="#navmenu">
+                            <div class="container-fluid">
+                                <!-- Brand and toggle get grouped for better mobile display -->
+                                <div class="navbar-header"  style="margin:0px;padding:0px">
+                                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                        <span class="sr-only">Toggle navigation</span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                    </button>
+                                    <a href="/Home/Index" style="margin:0px;padding:0px">
+                                        <img src="~/Content/images/NewLogo3.png"/>
+                                    </a>
                                 </div>
-                                <div class="col-sm-3 col-xs-12">
-                                    <div class="contactwithmap_menu">
-                                        <h2>Navigation</h2>
-                                        <ul class="footer_menu">
-                                            <li style="color:white">@Html.ActionLink("Home", "Index", "Home")</li>
-                                            <li style="color:white">@Html.ActionLink("Journey Planner", "JourneyPlanner", "Home")</li>
-                                            <li style="color:white">@Html.ActionLink("Support", "Support", "Home")</li>
-                                            <li style="color:white">@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                            <li style="color:white">@Html.ActionLink("About", "About", "Home")</li>
 
-                                        </ul>
-
-                                        <div class="contactwithmap_socail_bookmark">
-                                            <a href=""><i class="fa fa-twitter"></i></a>
-                                            <a href=""><i class="fa fa-instagram"></i></a>
-                                            <a href=""><i class="fa fa-google-plus"></i></a>
-                                        </div>
-
-                                    </div>
+                                <!-- Collect the nav links, forms, and other content for toggling -->
 
 
+
+                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                                    <ul class="nav navbar-nav navbar-right">
+                                        <li style="color:white">@Html.ActionLink("Home", "Index", "Home")</li>
+                                        <li style="color:white">@Html.ActionLink("Journey Planner", "JourneyPlanner", "Home")</li>
+                                        <li style="color:white">@Html.ActionLink("Support", "Support", "Home")</li>
+                                        <li style="color:white">@Html.ActionLink("Contact", "Contact", "Home")</li>
+                                        <li style="color:white">@Html.ActionLink("About", "About", "Home")</li>
+
+
+
+                                    </ul>
                                 </div>
+
                             </div>
-
-                        </div>
+                        </nav>
                     </div>
                 </div>
+
             </div>
-        </section><!-- End of contact With Map Section -->
-
-
-
-        <footer id="footer" class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="main_footer text-center">
-                        <p>Made with <i class="fa fa-heart"></i> by <a href="http://bootstrapthemes.co">Bootstrap Themes</a>2016. All Rights Reserved</p>
-                    </div>
-                </div>
-            </div>
-        </footer><!-- End of footer section -->
-        <!-- STRAT SCROLL TO TOP -->
-
-        <div class="scrollup">
-            <a href="#"><i class="fa fa-chevron-up"></i></a>
         </div>
+    </header> <!--End of header -->
+    @*</nav>*@
+
+
+    <div class="greyBackground" style="padding:0px">
+        @RenderBody()
+    </div>
+
+
+
+    <footer id="footer" class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="main_footer text-center">
+                    <p>Easy Access, Melbourne<i class="fa fa-wheelchair" style="color:yellow"></i>Team4Real 2018. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer><!-- End of footer section -->
+    <!-- STRAT SCROLL TO TOP -->
+
+    <div class="scrollup">
+        <a href="#"><i class="fa fa-chevron-up"></i></a>
+    </div>
     <environment include="Development">
-       @Scripts.Render("~/Scripts/vendor/jquery-1.11.2.min.js")
-       @Scripts.Render("~/Scripts/vendor/bootstrap.min.js")
+        @Scripts.Render("~/Scripts/vendor/jquery-1.11.2.min.js")
+        @Scripts.Render("~/Scripts/vendor/bootstrap.min.js")
         @Scripts.Render("~/Scripts/vendor/isotope.min.js")
         @Scripts.Render("~/Scripts/jquery.easypiechart.min.js")
-      @Scripts.Render("~/Scripts/jquery.mixitup.min.js")
+        @Scripts.Render("~/Scripts/jquery.mixitup.min.js")
         @Scripts.Render("~/Scripts/plugins.js")
-       @Scripts.Render("~/Scripts/main.js" )
-     
-        }
-        </environment>
+        @Scripts.Render("~/Scripts/main.js")
+
+        
+    </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
@@ -173,6 +127,6 @@
         </script>
         <script src="~/Scripts/site.min.js" asp-append-version="true"></script>
     </environment>
-        @RenderSection("Scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
