--- a/IEProject/IEProject/Views/Home/Index.cshtml
+++ b/IEProject/IEProject/Views/Home/Index.cshtml
@@ -44,99 +44,99 @@
 </style>
 <body data-spy="scroll" data-target="#navmenu">
 
-    <section id="home" class="home" style="background-image:url(/Content/images/Banner7NoContrast.png);margin-top:80px">
-        <div>
-            <div class="container">
-                <div class="row">
-                    <div class="main_slider_area">
-                        <div class="slider">
-                            <div class="col-sm-6 col-sm-offset-6">
-                                <div class="single_slider">
-                                    <h3>Visiting Melbourne City?</h3>
-                                    <p>Find accessible services near your destination.</p>
-                                    <div class="text-center" style="margin-top:10px; margin-bottom:150px">
-                                        <a class="btn btn-warning btn-min-block btn-lg" href="/Home/JourneyPlanner">Start here</a>
-                                    </div>
+   
 
+    <div class="no-padding" >
+        <div class="row">
+            <div class="col-md-12">
+                <div id="myCarousel" class="carousel" data-ride="carousel" data-interval="6000">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="/Content/images/Banner7NoContrast.png" alt="ASP.NET" class="img-responsive center-block" />
+                            <div class="ce">
+                                <span class="centered" style="color:white;font-size:30px;padding-top:0px;padding-bottom:0px;padding-left:3px;padding-right:3px"><strong>Planning your Journey?</strong></span><br />
+                                <div class="centered" style="color:white;width:auto;font-size:20px;padding:5px"> We make Melbourne city accessible to you.</div>
+                                <div class="text-center" style="margin-top:30px">
+                                    <a class="btn btn-warning btn-min-block btn-lg" href="/Home/JourneyPlanner">Start here</a>
                                 </div>
                             </div>
+                            <div class="carousel-caption" role="option">
+                  
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
+                </div>
+                <div class="main-text">
+                    <div class="col-md-5"></div>
+        
                 </div>
             </div>
         </div>
-    </section><!-- End of Banner Section -->
+    </div>
 
-
-    <section id="pricing" class="pricing" style="margin-top:5px">
+    <section id="clients" class="clients" style="color:black">
         <div class="container">
             <div class="row">
-                <div class="main_pricing">
-                    <div class="col-sm-10 col-sm-offset-1">
+                <div class="main_clients_area">
+
+                  
+                    <div class="main_clients_bottom_content">
+                        <h2>Meet Our Team</h2>
                         <div class="row">
-                            <div class="col-sm-8 col-xs-12">
-                                <div class="single_left_planig">
-                                    <h2>Are you growing independent ?</h2>
-                                    <p>Find information on services and support that can help you get there.</p>
-                                </div>
-                            </div>
-                            <div class="col-sm-4 col-xs-12">
-                                <div class="single_right_planig">
-                                    <a href="/Home/Support" class="btn btn-primary">Support</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!-- End of Support Section -->
-
-
-    @*<section id="contact" class="contact">
-        <div class="container">
-            <div class="row">
-                <div class="main_contact">
-
-                    <div class="contactwithmap_content">
-
-                        <div class="contact_overlay">
-                            <div class="col-sm-8 col-xs-12">
-                                <div class="locations_map">
-                                    <img src="~/Content/images/mapbg.png" alt="" />
-                                </div>
-                            </div>
-                            <div class="col-sm-3 col-xs-12">
-                                <div class="contactwithmap_menu">
-                                    <h2>Navigation</h2>
-                                    <ul class="footer_menu">
-                                        <li style="color:white">@Html.ActionLink("Home", "Index", "Home")</li>
-                                        <li style="color:white">@Html.ActionLink("Journey Planner", "JourneyPlanner", "Home")</li>
-                                        <li style="color:white">@Html.ActionLink("Support", "Support", "Home")</li>
-                                        <li style="color:white">@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                        <li style="color:white">@Html.ActionLink("About", "About", "Home")</li>
-
-                                    </ul>
-
-                                    <div class="contactwithmap_socail_bookmark">
-                                        <a href=""><i class="fa fa-twitter"></i></a>
-                                        <a href=""><i class="fa fa-instagram"></i></a>
-                                        <a href=""><i class="fa fa-google-plus"></i></a>
+                            <div class="col-sm-3">
+                                
+                                <div class="single_client_bottom">
+                                   
+                                    <p>
+                                         Jack is an MNS Student. 
+                                    </p>
+                                    <a href="">-Jack</a>
+                                    <div class="singel_client_bottom_img">
+                                        <img src="~/Content/images/cutmypic.png" alt="" />
                                     </div>
-
                                 </div>
-
-
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="single_client_bottom">
+                                    <p>
+                                         Lancy is an MBIS Student. 
+                                    </p>
+                                    <a href="">-Lancy</a>
+                                    <div class="singel_client_bottom_img">
+                                        <img src="~/Content/images/lancy.png" alt="" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="single_client_bottom">
+                                    <p>
+                                         Marlene is an MIT Student. 
+                                    </p>
+                                    <a href="">-Marlene</a>
+                                    <div class="singel_client_bottom_img">
+                                        <img src="~/Content/images/Marlene.png" alt="" />
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="col-sm-3">
+                                <div class="single_client_bottom">
+                                    <p>
+                                         Kenneth is an MIT Student. 
+                                    </p>
+                                    <a href="">-Kenneth</a>
+                                    <div class="singel_client_bottom_img">
+                                        <img src="~/Content/images/Ken.png" alt="" />
+                                    </div>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-    </section>*@<!-- End of contact With Map Section -->
-
+    </section>
 
 
 
