--- a/IEProject/IEProject/Views/Home/Index.cshtml
+++ b/IEProject/IEProject/Views/Home/Index.cshtml
@@ -41,6 +41,9 @@
         left: 70%;
         transform: translate(-50%, -50%);
     }
+    #home{
+      
+    }
 </style>
 <body data-spy="scroll" data-target="#navmenu">
 
